      is broken as it happens e.g. for external resolver errors
  * debian/apt-utils.links:
    - the internal resolver 'apt' is now directly installed in
      /usr/lib/apt/solvers, so don't instruct dh to create a broken link

  [ Justin B Rye ]
  * doc/apt-cdrom.8.xml:
    - replace CDROM with the proper CD-ROM in text
    - correct disc vs. disk issues

 -- David Kalnischkies <kalnischkies@gmail.com>  Thu, 24 May 2012 19:40:58 +0200

apt (0.9.5.1) unstable; urgency=low

  [ David Kalnischkies ]
  * apt-pkg/contrib/fileutl.cc:
    - dup() given compressed fd in OpenDescriptor if AutoClose
      is disabled as otherwise gzclose() and co will close it
  * doc/*.xml:
    - mark even more stuff as untranslateable and improve the
      markup here and there (no real text change)
    - use docbook DTD 4.5 instead of 4.2 to have valid docs

  [ Justin B Rye ]
  * doc/*.xml:
    - remove 'GNU/Linux' from 'Debian systems' strings as Debian
      has more systems than just GNU/Linux nowadays
  * doc/apt-cache.8.xml:
    - fix a typo as well as adding missing literal markup
    - three small rewordings for better english sentences

 -- Michael Vogt <mvo@debian.org>  Thu, 24 May 2012 17:16:34 +0200

apt (0.9.5) unstable; urgency=low

  [ Chris Leick ]
  * proofreading of the manpage pot
  * German manpage translation update (Closes: #673294)

  [ David Kalnischkies ]
  * buildlib/podomain.mak:
    - ensure that all sources end up in the srclist so that we don't
      forget to extract half of the translation strings
  * buildlib/inttypes.h.in:
    - remove inttypes.h compatibility as providing such a c99 types
      compatibility conflicts with the usage of c99 type long long
  * apt-pkg/contrib/mmap.cc:
    - have a dummy SyncToFd around in case of ReadOnly access to a
      compressed file as we otherwise on Close() do not delete[] the
      char buffer but munmap() it… (Closes: #673815)
  * debian/control: