@@ -12,6 +12,9 @@ apt (0.9.5.2) UNRELEASED; urgency=low
   * doc/apt-cdrom.8.xml:
     - replace CDROM with the proper CD-ROM in text
     - correct disc vs. disk issues
+  * doc/apt-config.8.xml:
+    - review and fix spelling issues
+
 
  -- David Kalnischkies <kalnischkies@gmail.com>  Thu, 24 May 2012 19:40:58 +0200
 
